# goit_py_web_hw_9

./: authors.json  main.py  pyproject.toml
