[tool.poetry]
name = "web-hw9"
version = "0.1.0"
description = ""
authors = ["Yaroslav Kubitskyi <fenixm22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
